<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    style="@style/TpnAct1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:src="@drawable/tpn_logo"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorWhite"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:onClick="setProfilePicture"/>
    <EditText
        android:id="@+id/et_name"
        style="@style/TpnET1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_name"
        android:layout_marginBottom="10dp"
        android:singleLine="true"
        android:maxLines="1"
        />
    <EditText
        android:id="@+id/et_username"
        style="@style/TpnET1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_username"
        android:layout_marginBottom="10dp"
        android:singleLine="true"
        android:maxLines="1"
        />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btn_changePassword"
        style="@style/TpnBtn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        fancy:fb_text="@string/btn_changePassword"
        android:onClick="goToMainActivity"
        ></mehdi.sakout.fancybuttons.FancyButton>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btn_updateProfile"
        style="@style/TpnBtn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        fancy:fb_text="@string/btn_updateProfile"
        android:onClick="goToMainActivity"
        ></mehdi.sakout.fancybuttons.FancyButton>

</LinearLayout>